* Version 0.8.0
  * New: colinux-daemon -p pidFile stores ID of coLinux in file pidFile.
    "colinux-console-fltk|nt -p pidFile" attach the monitor from stored
    ID.  With this mechanism can open a /named/ console without knowing
    the current ID (Process ID).  pidFile will removed on normal shutdown.
  * Added a nice colinux 3D logo image to the "About" box (Nlucas)
  * Kernel has been updated to 2.6.17
    (Thanks to Anders Eriksson for 2.6.13, 2.6.14, 2.6.15)
  * Holds multiple kernel versions in patch series files
    (2.6.12, 2.6.13, 2.6.14, 2.6.15, 2.6.17)
  * Un-/Installer checks a running coLinux before overwrite or remove old
    files.  [Bugs item #1396459, #1549148]
  * Uninstall old colinux with old exefile, path from registry uninstaller
    [Support Requests-1553923]
  * Stop with error, if double defined device (cobd,cofs,eth,exec)
  * TAP device version 8.4, fixed crashing Vista.
  * Update tapinstall.exe from DDK 3790.1830 (build Mar 24 2005)
  * colinux-debug-daemon: Only connect to driver, if args -s settings.
  * Option "-v level" enable verbose messages and debug prints on console.
  * Leveled debug output to Dbgview.exe (www.sysinternals.com).
    Needs to enable facility/level with colinux-debug-daemon before.
  
* Version 0.7.1
  * initrd: Automatic use cofs31 as path to file vmlinux-modules.tar.gz.
  * Warn about double configured index for cobd, eth, cofs, ttys, exec.
  * Bug #1479042: Ignore bootparm "no387", while no emulation is enabled.
  * cofs: Break out the limit of fullname length.  Basename length up
    to 255.  Fullpath is limited by path depth of 256 directories.
  * New: "execX=..." in configuration, launch external programs.
  * Bug fix: Quotation marks detection in config file, samples:
    eth0=tuntap,"LAN-Connection 14",00:11:22:33:44:55
    cofs0="C:\My files"
  * Bug fix: Crash at open /dev/ttyS*.
    New: "ttysX=..." in configuration, launch coserial daemon.